# LibraryManager

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  config.h.in
include/: CLIParser.h  LibraryExceptions.h  LibraryItem.h  LibraryItemCategory.h  LibraryItemKind.h  LibraryManager.h  config.h  helpers.h
include/database/: LibraryDatabase.h  LibraryNavigator.h  SQLiteLibraryDatabase.h
include/ui/: FTXUILibraryUI.h  LibraryUI.h
src/: CLIParser.cpp  LibraryExceptions.cpp  LibraryItem.cpp  LibraryItemCategory.cpp  LibraryItemKind.cpp  LibraryManager.cpp  helpers.cpp  main.cpp
src/database/: LibraryNavigator.cpp  SQLiteLibraryDatabase.cpp
src/ui/: FTXUILibraryUI.cpp
